tests/fixtures/invalid/str_bitand_none.py
# Cannot bitwise AND Str and None
x: str = "hello" & None
